--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(${PROJECT_NAME}_REVISION_VERSION 1)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 
+add_compile_definitions (RESOURCE_PATH="${CMAKE_CURRENT_SOURCE_DIR}/res")
+
 add_subdirectory(extern)
 add_subdirectory(src)
 
